# TupacMachine

./: Google Chrome.lnk  PoonSummarych2  SLM1.py  WeeklyStatus.txt  costs.txt  holographyscript.m
Ben/: Base.gcode  Base.stl  DiffractionFieldRectAperture.m  Holder.gcode  Holder.stl  Holder2.gcode  Holder2.stl  Insert.stl  PoonSummarych3  WeeklyStatus.txt  depthConverter.m  depthConverter.py  depthtemp.m  holographyscript.m  octave-workspace
DK_Archive/: ActivityLog_DongKyu.txt
David/: David Kim Activity Log Spring.docx  David Kim Activity Log.docx  ~$vid Kim Activity Log Spring.docx  ~$vid Kim Activity Log.docx
DongKyu/: ActivityLog_DongKyu.txt  ActivityLog_DongKyu_Spring_2019.txt
DongKyu/References/: SLM1.py  hologram.py  hologram_pretty.py  ugh.asda
GLProject/: CMakeLists.txt  main.cpp  shader.cpp  shader.hpp  simplefragmentshader.fragmentshader  simplevertexshader.vertexshader
Junbum/: SLAB activity log second semester.docx  SLAB activity log.docx  backup.py  color.py  controldisplay.py  dynamic.py  imagelock.py  path.cs  path.py  slmpy.py  ~$AB activity log.docx
Junbum/ColorBasics-WPF/: ColorBasics-WPF.csproj  MainWindow.xaml.cs
KinectFusionExplorer-WPF/: KinectFusionExplorer-WPF.csproj  MainWindow.xaml  MainWindow.xaml.cs  script.py
Microsoft.Kinect.Fusion/: Microsoft.Kinect.Fusion.sln
WpfApp1/: MainWindow.xaml  MainWindow.xaml.cs  WpfApp1.csproj
WpfApp1/Properties/: Resources.Designer.cs
pipeline/: hologram.py  pipeline.py  slm.py
report/: Archive.tex  ref.bib  report.aux  report.bbl  report.blg  report.tex  run.sh
